outputs/main/reevo_cvrp_aco_2025-04-28_11-27-34/problem_iter6_response5.txt_stdout.txt
Traceback (most recent call last):
  File "C:\Users\Nam\Documents\GitHub\HSEvo/problems/cvrp_aco/eval.py", line 11, in <module>
    import gpt
  File "C:\Users\Nam\Documents\GitHub\HSEvo\problems\cvrp_aco\gpt.py", line 29
    depot_proximity_factor[i, j] = np.exp(-0.5 * ((distance_matrix[0, i] + distance_matrix[j, 0]) / (2 * depot_distance_scale)**2)
                                         ^
SyntaxError: '(' was never closed
